Bootstrap 2.3.2 version. Add dropdowns checklist directive (separate template from directive). Fix bug Dvd format filters. Add collapse/Expand all Dvd option.

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -77,6 +77,11 @@ footer, .push {
     /*margin-top: -30px;*/
 }
 
+.collapse-expand-all-button {
+    float: right;
+    /*margin-top: -30px;*/
+}
+
 .accordion-body.in:hover {
     overflow:visible;
 }
